# socket-firewall-configurator

./: .flake8  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  socket-firewall-configurator-reusable.yml  socket-firewall-configurator.yml  socket-security-reusable.yml
app/socket-firewall-configurator/: __init__.py  configurator.py  policy.py  validator.py
policies/: org-defaults.yml
policies/repositories/: api-gateway.yml  internal-tool.yml  ml-pipeline.yml  socket-firewall-test.yml
tests/: __init__.py  test_configurator.py  test_policy.py  test_validator.py
